--- a/index.html
+++ b/index.html
@@ -1,2 +1,36 @@
-# CenterofCybersecurity
-Welcome to Center of Cybersecurity
+Center for Cybersecurity
+
+Point of Contact: Dr. Zhengrui Qin
+
+Cybersecurity-related programs
+Our Bachelor of Science in Cybersecurity is approved as a National Security Agency (NSA) Validated Program of Study (PoS), and offers students with knowledge, skills and experiences for securing all assets in networks, including hardware, software, and information.
+Bachelor of Science in Cybersecurity
+Bachelor of Applied Science in Cyber Assurance
+ 
+
+Affiliated Faculty
+•	Dr. Zhengrui Qin
+•	Dr. Joni Adkins
+•	Dr. Nathan Eloe
+•	Dr. Cindy Tu
+•	Dr. Gary Zhao
+•	Ms. Crystal Combs
+
+Student Activities
+Our students are active in student organizations, including:
+•	Cyber Defense Club, contact Dr. Zhengrui Qin
+•	ACM student chapter, contact Dr. Charles Hoot
+•	Upsilon Pi Epsilon, contact Dr. Ajay Bandi and Ms. Diana Linville
+
+News
+•	Northwest Missouri State University Cybersecurity News
+•	Global Cybersecurity News
+1.	Cybernews.com
+2.	https://cybernewsglobal.com/
+
+Cybersecurity Competitions
+Students in cybersecurity have opportunities to participate nationwide competitions in-person or virtually, where they can apply cybersecurity-related theories and methods learned in classes to real-world problems. Through these competitions, students can enhance their knowledge, expand their social networks, and eventually benefit their future careers. 
+Most well-known cybersecurity competitions are:
+National Collegiate Cyber Defense Competition
+US Cyber Games
+National Cyber League
